# FARFAN-ULTIMATE-main

./: .coverage  .gitignore  .importlinter  .output.txt  .pre-commit-config.yaml  ARQUITECTURA_IMMUTABLE_CONTEXT.md  BRANCHING_STRATEGY.md  CANONICAL_PIPELINE_GAP_REPORT.md  CONTRACT_DIFFS_REPORT.md  Comprehensive Deterministic Pipeline Validator with Micro-Level Characterization.py  Comprehensive dependency analysis for PIROBOSTALES system Identifies root causes of import failures and dependency conflicts.py  ComprehensiveStaticAudit.py  Copia de pattern_matcher.py  Cuestionario Original de la Metodología.md  DETERMINISTIC_FLUX.md  DEVELOPMENT PLAN.py  Decálogo de Derechos Humanos_ Puntos y Clústeres.md  Dockerfile  EXTRACTOR DE EVIDENCIAS CONTEXTUAL.py  EnvironmentVerification.py  GOVERNANCE.py  INVENTORY.jsonl  INVENTORY_SUMMARY.md  L_CLASSIFICATION_EVALUATION_TECHNICAL_SPEC.md  Makefile  PIPELINEORCHESTRATOR.py  README.MATH  README.md  README_ADDENDUM.md  README_ATROZ_TEMPLATE_SYSTEM.md  README_AUDIT_LOGGING.md  README_CI_CD_PIPELINE.md  README_CONTRACTS.md  README_DEP_DOCTOR.md  README_EVENT_DRIVEN_ARCHITECTURE.md  README_IMPORT_SAFETY.md  README_INNOVATION.md  README_METHODOLOGY.md  README_MONITORING_DASHBOARD.md  README_ORGANIZATION.md  (+425 more)
.controlled_deletion/: README.md
G_aggregation_reporting/: __init__.py  meso_aggregator.py  report_compiler.py
G_reporting/: DAG_Health.md
adapters/: __init__.py  data_transfer_objects.py  demo_adapter_usage.py  import_blocker.py  integration_example.py  lineage_tracker.py  retrieval_analysis_adapter.py  schema_mismatch_logger.py
analysis_nlp/: __init__.py
analysis_reports/: black_format_report.txt  import_order_report.txt  mypy_report.txt  ruff_report.txt
architecture_tests/: __init__.py  conftest.py  test_import_graph_analysis.py  test_phase_enforcement.py
assessment/: baseline_report.md  baseline_test.json  continuous_test.json
calibration_safety_governance/: README.md  __init__.py  auto_deactivation_monitor.py  demo_orchestration.py  orchestrator.py  preflight_validator.py  provenance_tracker.py  test_orchestration_system.py  thresholds.json
canonical_flow/: ACANDI-CHOCO - copia - copia (2).json  AGUSTIN CODAZZI-CESAR - copia - copia (2).json  ISTMINA CHOCO - copia - copia.json  README.md  README_ADDENDUM.md  README_CONTRACTS.md  README_INNOVATION.md  __definitely_missing__.json  __init__.py  bridge_registry.py  calibration_dashboard.py  compilation_report.json  component_scanner_update.py  configuration_injection.py  dependency_audit.json  governance_ui_integration.py  index.json  nonexistent.json  owner_assignment_system.py  pipeline_contract_annotations.py  pipeline_state.json  pipeline_state_manager.py  project_analysis_report.json  readiness.json  thresholds.json
contracts/: __init__.py  demo_integration.py  schemas.py  test_schemas.py
dashboard/: __init__.py  backend_state.py  persistence.py  state_manager.py  store.py  transitions.py  ui_state.py
data/: calibration_report.json  decalogo_question_registry.json  hybrid_state.json  lexical_state.json  spectral_enhancement.json  standards.json  vector_state.json
docs/: AZURE_ACR_BUILD.md  CANONICAL_PDF_DEPENDENCIES.md  CCC_VALIDATION_SYSTEM.md  INSTALLATION_TROUBLESHOOTING.md
egw_query_expansion/: __init__.py  installation_diagnostics.py  mathematical_foundations.py
egw_query_expansion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: conformal_risk_demo.py  early_error_detector_demo.py  event_bus_demo.py  tracing_example.py
git_hooks/: pre-commit
hypothesis_module/: __init__.py  strategies.py
microservices/: __init__.py  tracing.py
notebooks/: demo.ipynb
phases/: __init__.py  _validation.py  backward_compatibility.py  demo_phase_usage.py
pipeline_visualizations/: pipeline_dag.txt
retrieval_engine/: __init__.py  hybrid_retriever.py  lexical_index.py  vector_index.py
schemas/: __init__.py  api_models.py  pipeline_schemas.py
scripts/: bulk_annotate_components.py  check_circular_imports.py  check_star_imports.py  detect_circular_imports.py  generate_analysis_report.py  performance_monitor.py  pre_commit_hook.py  run_strict_analysis.py  runtime_import_guard.py  setup_static_analysis.py  validate_dependency_compatibility.py  validate_imports.py  validate_phase_enforcement.py  validate_pipeline_annotations.sh  validate_type_imports.py
semantic_reranking/: __init__.py  reranker.py
standards_alignment/: __init__.py  api.py  graph_ops.py  gw_alignment.py  patterns.py  stable_gw_aligner.py
static/: atroz_dashboard.css  atroz_dashboard.js  atroz_neural_network.js  atroz_particle_system.js
templates/: atroz_dashboard.html  atroz_minimal.html
test_deps/: __init__.py  module_a.py  module_b.py  module_c.py
tests/: README.md  __init__.py  conftest.py  deterministic_execution_test.py  phase_annotation_test.py  security_regression_test.py  syntax_validation_test.py  test_08x_context_construction.py  test_09x_context_construction.py  test_10x_context_construction.py  test_11x_context_construction.py  test_12x_context_construction.py  test_52s_synthesis_output.py  test_53s_synthesis_output.py  test_54s_synthesis_output.py  test_55s_synthesis_output.py  test_56s_synthesis_output.py  test_57s_synthesis_output.py  test_answer_formatter.py  test_api.py  test_basic_functionality.py  test_bmc.py  test_calibration_ci.py  test_code_quality_fixes.py  test_code_quality_fixes_minimal.py  test_comprehensive_validation_ci.py  test_conformal_risk_system.py  test_constraint_validator.py  test_contract_validation.py  test_controlled_deletion_system.py  test_dependency_compatibility.py  test_deterministic_canonical_audit.py  test_deterministic_retrieval.py  test_deterministic_router_simple.py  test_evidence_processor.py  test_evidence_system.py  test_evidence_validation.py  test_ffc.py  test_fixtures.py  test_full_deterministic_router.py  (+28 more)
tools/: README_anti_corruption_adapters.md  README_codemod_phase.md  README_controlled_deletion.md  adapter_bridge_templates.py  add_pipeline_annotations.py  anti_corruption_adapters.py  (+44 more)
(+732 files in other folders)
